# cat_say

./: Cargo.toml  README.md  output.txt  stderr.txt
src/: lib.rs  main.rs
tests/: integration_test.rs
